improvement: take a shot at list of int